# plug_agente

./: .env.example  .gitattributes  .gitignore  .metadata  AGENTS.md  CHANGELOG.md  CLAUDE.md  PORT_MONITOR_STATUS.md  README.md  analysis_options.yaml  appcast.xml  dart_test.yaml  dsa_pub.pem  install_monitor.bat  pubspec.yaml  readme.md  uninstall_monitor.bat
.claude/: ARCHITECTURE.md  CLAUDE.md  CLAUDE_INSTRUCTIONS.md  CODING_CONVENTIONS.md  DEPENDENCIES.md  PROJECT_GUIDELINES.md  README.md  settings.local.json
benchmark/: README.md  e2e_odbc_rpc.jsonl  payload_frame_transport.jsonl  socket_transport.jsonl  socket_transport_e2e.jsonl
constants/: autostart_arg.txt
docs/: ANALYSIS_IMPROVEMENTS.md  IMPLEMENTATION_PLAN.md  MIGRATION_ODBC_FAST.md  RESULT_DART_ANALYSIS.md  data_flow.md  dependencies.md  migracao_plug_agente_namespaces.md  project_overview.md  project_structure.md  readme.md  recovery_reimplementation_plan.md
installer/: README.md  build_installer.py  constants.iss  readme.md  setup.iss  update_version.py
lib/: main.dart
native/PlugPortMon/: CMakeLists.txt
native/PlugPortMon/include/: exports.h
native/PlugPortMon/src/: dll_main.cpp  monitor2_impl.cpp  named_pipe_client.cpp  named_pipe_client.h  port_monitor.cpp  port_monitor.h
scripts/: test_single_instance.ps1  test_single_instance.py  verify_autostart_constant.ps1  verify_autostart_constant.py
test/: widget_test.dart
tool/: __init__.py  agent_action_security_gate_checklist.dart  agent_actions_contract_test_paths.txt  agent_actions_ui_test_paths.txt  appcast_manager.py  appcast_signing.py  benchmark_evolution_report.py  benchmark_odbc_pool_modes.dart  benchmark_transport_pipeline.dart  benchmark_transport_pipeline_async_stub.dart  build_elevated_runner.ps1  build_elevated_runner.py  check_coverage_gate.dart  (+71 more)
windows/update_helper/: CMakeLists.txt  main.cpp
(+2394 files in other folders)
